...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Perhitungan Waktu Salat",
                        fontWeight = FontWeight.Bold,
                        fontSize = 18.sp,
                        maxLines = 1,
                        overflow = TextOverflow.Ellipsis,
                        color = if (isDark) PutihBersih else TextCharcoal
                    )
...
